Principal Use Case problems and some smells fixed