@@ -3,11 +3,8 @@ package models.booking;
 import models.training.Training;
 import models.user.Athlete;
 
-import java.time.LocalDate;
-import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class BookingDAOMem extends BookingDAO {
     private static BookingDAOMem instance;
@@ -33,13 +30,13 @@ public class BookingDAOMem extends BookingDAO {
     public List<BookingInterface> getBookingByUser(Athlete user) {
         return bookings.stream()
                 .filter(b -> b.getAthlete().getUsername().equals(user.getUsername()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<BookingInterface> getBookingByTraining(Training training) {
         return bookings.stream()
                 .filter(b -> b.getTraining().getPersonalTrainer().getUsername().equals(training.getPersonalTrainer().getUsername()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
